--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "layout": "^2.2.0",
     "mongo": "^0.1.0",
     "mongoose": "^7.0.1",
+    "node-sass-middleware": "^1.0.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "session": "^0.1.0"
