--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "layout": "^2.2.0",
     "mongo": "^0.1.0",
     "mongoose": "^6.0.0",
+    "multer": "^1.4.5-lts.1",
     "node-sass-middleware": "^1.0.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
