--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "session": "^0.1.0"
+    "session": "^0.1.0",
+    "socket.io": "^4.6.1"
   }
 }
