--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.0",
     "layout": "^2.2.0",
     "mongo": "^0.1.0",
     "mongoose": "^6.0.0",
+    "multer": "^1.4.5-lts.1",
     "node-sass-middleware": "^1.0.1",
     "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "session": "^0.1.0"
+    "session": "^0.1.0",
+    "socket.io": "^4.6.1"
   }
 }
